project(
  'hypre',
  'c',
  version: '3.1.0',
  default_options: ['warning_level=1'],
)

# TODO: Support FEI

cfg = {
  'CMAKE_PROJECT_NAME': 'HYPRE',
  'HYPRE_VERSION': '3.1.0',
  'HYPRE_NUMBER': 30100,
  'HYPRE_DATE': '2026/01/23',
  'HYPRE_TIME': '00:00:00',
  'HYPRE_BUGS': 'https://github.com/hypre-space/hypre/issues',
  'HYPRE_MIXEDINT': get_option('mixedint'),
  'HYPRE_BIGINT': get_option('bigint'),
  'HYPRE_SINGLE': get_option('single'),
  'HYPRE_LONG_DOUBLE': get_option('long_double'),
  'HYPRE_COMPLEX': get_option('complex'),
  'HYPRE_PRINT_ERRORS': true,
  'HYPRE_USING_OPENMP': true,
  'HYPRE_USING_HOST_MEMORY': true,
  'HYPRE_USING_SUPERLU': true,
  'HYPRE_USING_DSUPERLU': true,
  'HYPRE_HAVE_MPI': true,
  'HYPRE_FMANGLE': 0,
  'HYPRE_FMANGLE_BLAS': 0,
  'HYPRE_FMANGLE_LAPACK': 0,
}
configure_file(
  configuration: cfg,
  input: 'src/config/HYPRE_config.h.cmake.in',
  output: 'HYPRE_config.h',
  format: 'cmake@',
)

src = [
  'src/distributed_ls/Euclid/blas_dh.c',
  'src/distributed_ls/Euclid/Euclid_apply.c',
  'src/distributed_ls/Euclid/Euclid_dh.c',
  'src/distributed_ls/Euclid/ExternalRows_dh.c',
  'src/distributed_ls/Euclid/Factor_dh.c',
  'src/distributed_ls/Euclid/getRow_dh.c',
  'src/distributed_ls/Euclid/globalObjects.c',
  'src/distributed_ls/Euclid/Hash_dh.c',
  'src/distributed_ls/Euclid/Hash_i_dh.c',
  'src/distributed_ls/Euclid/ilu_mpi_bj.c',
  'src/distributed_ls/Euclid/ilu_mpi_pilu.c',
  'src/distributed_ls/Euclid/ilu_seq.c',
  'src/distributed_ls/Euclid/io_dh.c',
  'src/distributed_ls/Euclid/krylov_dh.c',
  'src/distributed_ls/Euclid/Mat_dh.c',
  'src/distributed_ls/Euclid/mat_dh_private.c',
  'src/distributed_ls/Euclid/MatGenFD.c',
  'src/distributed_ls/Euclid/Mem_dh.c',
  'src/distributed_ls/Euclid/Numbering_dh.c',
  'src/distributed_ls/Euclid/Parser_dh.c',
  'src/distributed_ls/Euclid/shellSort_dh.c',
  'src/distributed_ls/Euclid/sig_dh.c',
  'src/distributed_ls/Euclid/SortedList_dh.c',
  'src/distributed_ls/Euclid/SortedSet_dh.c',
  'src/distributed_ls/Euclid/SubdomainGraph_dh.c',
  'src/distributed_ls/Euclid/TimeLog_dh.c',
  'src/distributed_ls/Euclid/Timer_dh.c',
  'src/distributed_ls/Euclid/Vec_dh.c',
  'src/distributed_ls/ParaSails/ConjGrad.c',
  'src/distributed_ls/ParaSails/DiagScale.c',
  'src/distributed_ls/ParaSails/FGmres.c',
  'src/distributed_ls/ParaSails/Hash.c',
  'src/distributed_ls/ParaSails/hypre_ParaSails.c',
  'src/distributed_ls/ParaSails/LoadBal.c',
  'src/distributed_ls/ParaSails/Matrix.c',
  'src/distributed_ls/ParaSails/Mem.c',
  'src/distributed_ls/ParaSails/Numbering.c',
  'src/distributed_ls/ParaSails/OrderStat.c',
  'src/distributed_ls/ParaSails/ParaSails.c',
  'src/distributed_ls/ParaSails/PrunedRows.c',
  'src/distributed_ls/ParaSails/RowPatt.c',
  'src/distributed_ls/ParaSails/StoredRows.c',
  'src/distributed_ls/pilut/comm.c',
  'src/distributed_ls/pilut/debug.c',
  'src/distributed_ls/pilut/distributed_qsort.c',
  'src/distributed_ls/pilut/distributed_qsort_si.c',
  'src/distributed_ls/pilut/HYPRE_DistributedMatrixPilutSolver.c',
  'src/distributed_ls/pilut/ilut.c',
  'src/distributed_ls/pilut/parilut.c',
  'src/distributed_ls/pilut/parutil.c',
  'src/distributed_ls/pilut/pblas1.c',
  'src/distributed_ls/pilut/serilut.c',
  'src/distributed_ls/pilut/trifactor.c',
  'src/distributed_ls/pilut/util.c',
  'src/distributed_matrix/distributed_matrix.c',
  'src/distributed_matrix/distributed_matrix_ISIS.c',
  'src/distributed_matrix/distributed_matrix_parcsr.c',
  'src/distributed_matrix/distributed_matrix_PETSc.c',
  'src/distributed_matrix/HYPRE_distributed_matrix.c',
  'src/IJ_mv/aux_par_vector.c',
  'src/IJ_mv/aux_parcsr_matrix.c',
  'src/IJ_mv/F90_HYPRE_IJMatrix.c',
  'src/IJ_mv/F90_HYPRE_IJVector.c',
  'src/IJ_mv/F90_IJMatrix.c',
  'src/IJ_mv/HYPRE_IJMatrix.c',
  'src/IJ_mv/HYPRE_IJVector.c',
  'src/IJ_mv/IJ_assumed_part.c',
  'src/IJ_mv/IJMatrix.c',
  'src/IJ_mv/IJMatrix_parcsr.c',
  'src/IJ_mv/IJMatrix_parcsr_device.c',
  'src/IJ_mv/IJVector.c',
  'src/IJ_mv/IJVector_parcsr.c',
  'src/IJ_mv/IJVector_parcsr_device.c',
  'src/krylov/bicgstab.c',
  'src/krylov/cgnr.c',
  'src/krylov/cogmres.c',
  'src/krylov/flexgmres.c',
  'src/krylov/gmres.c',
  'src/krylov/HYPRE_bicgstab.c',
  'src/krylov/HYPRE_cgnr.c',
  'src/krylov/HYPRE_cogmres.c',
  'src/krylov/HYPRE_flexgmres.c',
  'src/krylov/HYPRE_gmres.c',
  'src/krylov/HYPRE_lgmres.c',
  'src/krylov/HYPRE_lobpcg.c',
  'src/krylov/HYPRE_pcg.c',
  'src/krylov/lgmres.c',
  'src/krylov/lobpcg.c',
  'src/krylov/mup_fixed.c',
  'src/krylov/mup_functions.c',
  'src/krylov/mup_lobpcg_fixed.c',
  'src/krylov/mup_lobpcg_functions.c',
  'src/krylov/mup_lobpcg_pre.c',
  'src/krylov/mup_pre.c',
  'src/krylov/pcg.c',
  'src/matrix_matrix/HYPRE_ConvertParCSRMatrixToDistributedMatrix.c',
  'src/matrix_matrix/HYPRE_ConvertPETScMatrixToDistributedMatrix.c',
  'src/multivector/multivector.c',
  'src/multivector/temp_multivector.c',
  'src/parcsr_block_mv/csr_block_matrix.c',
  'src/parcsr_block_mv/csr_block_matvec.c',
  'src/parcsr_block_mv/par_block_nodal_systems.c',
  'src/parcsr_block_mv/par_csr_block_comm.c',
  'src/parcsr_block_mv/par_csr_block_interp.c',
  'src/parcsr_block_mv/par_csr_block_matrix.c',
  'src/parcsr_block_mv/par_csr_block_matvec.c',
  'src/parcsr_block_mv/par_csr_block_rap.c',
  'src/parcsr_block_mv/par_csr_block_rap_communication.c',
  'src/parcsr_block_mv/par_csr_block_relax.c',
  'src/parcsr_ls/ads.c',
  'src/parcsr_ls/ame.c',
  'src/parcsr_ls/amg_hybrid.c',
  'src/parcsr_ls/ams.c',
  'src/parcsr_ls/aux_interp.c',
  'src/parcsr_ls/block_tridiag.c',
  'src/parcsr_ls/dsuperlu.c',
  'src/parcsr_ls/F90_HYPRE_ams.c',
  'src/parcsr_ls/F90_hypre_laplace.c',
  'src/parcsr_ls/F90_HYPRE_parcsr_amg.c',
  'src/parcsr_ls/F90_HYPRE_parcsr_bicgstab.c',
  'src/parcsr_ls/F90_HYPRE_parcsr_block.c',
  'src/parcsr_ls/F90_HYPRE_parcsr_cgnr.c',
  'src/parcsr_ls/F90_HYPRE_parcsr_cogmres.c',
  'src/parcsr_ls/F90_HYPRE_parcsr_Euclid.c',
  'src/parcsr_ls/F90_HYPRE_parcsr_flexgmres.c',
  'src/parcsr_ls/F90_HYPRE_parcsr_gmres.c',
  'src/parcsr_ls/F90_HYPRE_parcsr_hybrid.c',
  'src/parcsr_ls/F90_HYPRE_parcsr_ilu.c',
  'src/parcsr_ls/F90_HYPRE_parcsr_int.c',
  'src/parcsr_ls/F90_HYPRE_parcsr_lgmres.c',
  'src/parcsr_ls/F90_HYPRE_parcsr_mgr.c',
  'src/parcsr_ls/F90_HYPRE_parcsr_ParaSails.c',
  'src/parcsr_ls/F90_HYPRE_parcsr_pcg.c',
  'src/parcsr_ls/F90_HYPRE_parcsr_pilut.c',
  'src/parcsr_ls/F90_HYPRE_parcsr_schwarz.c',
  'src/parcsr_ls/gen_redcs_mat.c',
  'src/parcsr_ls/HYPRE_ads.c',
  'src/parcsr_ls/HYPRE_ame.c',
  'src/parcsr_ls/HYPRE_ams.c',
  'src/parcsr_ls/HYPRE_parcsr_amg.c',
  'src/parcsr_ls/HYPRE_parcsr_amgdd.c',
  'src/parcsr_ls/HYPRE_parcsr_bicgstab.c',
  'src/parcsr_ls/HYPRE_parcsr_block.c',
  'src/parcsr_ls/HYPRE_parcsr_cgnr.c',
  'src/parcsr_ls/HYPRE_parcsr_cheby.c',
  'src/parcsr_ls/HYPRE_parcsr_cogmres.c',
  'src/parcsr_ls/HYPRE_parcsr_Euclid.c',
  'src/parcsr_ls/HYPRE_parcsr_flexgmres.c',
  'src/parcsr_ls/HYPRE_parcsr_fsai.c',
  'src/parcsr_ls/HYPRE_parcsr_gmres.c',
  'src/parcsr_ls/HYPRE_parcsr_hybrid.c',
  'src/parcsr_ls/HYPRE_parcsr_ilu.c',
  'src/parcsr_ls/HYPRE_parcsr_int.c',
  'src/parcsr_ls/HYPRE_parcsr_lgmres.c',
  'src/parcsr_ls/HYPRE_parcsr_ls_mp.c',
  'src/parcsr_ls/HYPRE_parcsr_mgr.c',
  'src/parcsr_ls/HYPRE_parcsr_ParaSails.c',
  'src/parcsr_ls/HYPRE_parcsr_pcg.c',
  'src/parcsr_ls/HYPRE_parcsr_pilut.c',
  'src/parcsr_ls/HYPRE_parcsr_schwarz.c',
  'src/parcsr_ls/mup_fixed.c',
  'src/parcsr_ls/mup_functions.c',
  'src/parcsr_ls/mup_pre.c',
  'src/parcsr_ls/par_2s_interp.c',
  'src/parcsr_ls/par_2s_interp_device.c',
  'src/parcsr_ls/par_add_cycle.c',
  'src/parcsr_ls/par_amg.c',
  'src/parcsr_ls/par_amg_setup.c',
  'src/parcsr_ls/par_amg_solve.c',
  'src/parcsr_ls/par_amg_solveT.c',
  'src/parcsr_ls/par_amgdd.c',
  'src/parcsr_ls/par_amgdd_comp_grid.c',
  'src/parcsr_ls/par_amgdd_fac_cycle.c',
  'src/parcsr_ls/par_amgdd_fac_cycle_device.c',
  'src/parcsr_ls/par_amgdd_helpers.c',
  'src/parcsr_ls/par_amgdd_setup.c',
  'src/parcsr_ls/par_amgdd_solve.c',
  'src/parcsr_ls/par_cg_relax_wt.c',
  'src/parcsr_ls/par_cgc_coarsen.c',
  'src/parcsr_ls/par_cheby.c',
  'src/parcsr_ls/par_cheby_device.c',
  'src/parcsr_ls/par_cheby_setup.c',
  'src/parcsr_ls/par_cheby_solve.c',
  'src/parcsr_ls/par_coarse_parms.c',
  'src/parcsr_ls/par_coarse_parms_device.c',
  'src/parcsr_ls/par_coarsen.c',
  'src/parcsr_ls/par_coarsen_device.c',
  'src/parcsr_ls/par_coordinates.c',
  'src/parcsr_ls/par_cr.c',
  'src/parcsr_ls/par_cycle.c',
  'src/parcsr_ls/par_difconv.c',
  'src/parcsr_ls/par_fsai.c',
  'src/parcsr_ls/par_fsai_device.c',
  'src/parcsr_ls/par_fsai_setup.c',
  'src/parcsr_ls/par_fsai_solve.c',
  'src/parcsr_ls/par_gauss_elim.c',
  'src/parcsr_ls/par_ge_device.c',
  'src/parcsr_ls/par_gsmg.c',
  'src/parcsr_ls/par_ilu.c',
  'src/parcsr_ls/par_ilu_setup.c',
  'src/parcsr_ls/par_ilu_setup_device.c',
  'src/parcsr_ls/par_ilu_solve.c',
  'src/parcsr_ls/par_ilu_solve_device.c',
  'src/parcsr_ls/par_indepset.c',
  'src/parcsr_ls/par_indepset_device.c',
  'src/parcsr_ls/par_interp.c',
  'src/parcsr_ls/par_interp_device.c',
  'src/parcsr_ls/par_interp_trunc_device.c',
  'src/parcsr_ls/par_jacobi_interp.c',
  'src/parcsr_ls/par_krylov_func.c',
  'src/parcsr_ls/par_laplace.c',
  'src/parcsr_ls/par_laplace_27pt.c',
  'src/parcsr_ls/par_laplace_9pt.c',
  'src/parcsr_ls/par_lr_interp.c',
  'src/parcsr_ls/par_lr_interp_device.c',
  'src/parcsr_ls/par_lr_restr.c',
  'src/parcsr_ls/par_lr_restr_device.c',
  'src/parcsr_ls/par_mgr.c',
  'src/parcsr_ls/par_mgr_coarsen.c',
  'src/parcsr_ls/par_mgr_device.c',
  'src/parcsr_ls/par_mgr_interp.c',
  'src/parcsr_ls/par_mgr_rap.c',
  'src/parcsr_ls/par_mgr_setup.c',
  'src/parcsr_ls/par_mgr_solve.c',
  'src/parcsr_ls/par_mgr_stats.c',
  'src/parcsr_ls/par_mod_lr_interp.c',
  'src/parcsr_ls/par_mod_multi_interp.c',
  'src/parcsr_ls/par_mod_multi_interp_device.c',
  'src/parcsr_ls/par_multi_interp.c',
  'src/parcsr_ls/par_nodal_systems.c',
  'src/parcsr_ls/par_nongalerkin.c',
  'src/parcsr_ls/par_rap.c',
  'src/parcsr_ls/par_rap_communication.c',
  'src/parcsr_ls/par_relax.c',
  'src/parcsr_ls/par_relax_device.c',
  'src/parcsr_ls/par_relax_interface.c',
  'src/parcsr_ls/par_relax_more.c',
  'src/parcsr_ls/par_relax_more_device.c',
  'src/parcsr_ls/par_restr.c',
  'src/parcsr_ls/par_rotate_7pt.c',
  'src/parcsr_ls/par_scaled_matnorm.c',
  'src/parcsr_ls/par_schwarz.c',
  'src/parcsr_ls/par_stats.c',
  'src/parcsr_ls/par_strength.c',
  'src/parcsr_ls/par_strength2nd_device.c',
  'src/parcsr_ls/par_strength_device.c',
  'src/parcsr_ls/par_sv_interp.c',
  'src/parcsr_ls/par_sv_interp_ln.c',
  'src/parcsr_ls/par_vardifconv.c',
  'src/parcsr_ls/par_vardifconv_rs.c',
  'src/parcsr_ls/partial.c',
  'src/parcsr_ls/schwarz.c',
  'src/parcsr_mv/communicationT.c',
  'src/parcsr_mv/F90_HYPRE_parcsr_matrix.c',
  'src/parcsr_mv/F90_HYPRE_parcsr_vector.c',
  'src/parcsr_mv/F90_par_vector.c',
  'src/parcsr_mv/F90_parcsr_matrix.c',
  'src/parcsr_mv/gen_fffc.c',
  'src/parcsr_mv/HYPRE_parcsr_matrix.c',
  'src/parcsr_mv/HYPRE_parcsr_mv_mp.c',
  'src/parcsr_mv/HYPRE_parcsr_vector.c',
  'src/parcsr_mv/mup_fixed.c',
  'src/parcsr_mv/mup_functions.c',
  'src/parcsr_mv/mup_pre.c',
  'src/parcsr_mv/new_commpkg.c',
  'src/parcsr_mv/numbers.c',
  'src/parcsr_mv/par_csr_aat.c',
  'src/parcsr_mv/par_csr_assumed_part.c',
  'src/parcsr_mv/par_csr_bool_matop.c',
  'src/parcsr_mv/par_csr_bool_matrix.c',
  'src/parcsr_mv/par_csr_communication.c',
  'src/parcsr_mv/par_csr_fffc_device.c',
  'src/parcsr_mv/par_csr_filter.c',
  'src/parcsr_mv/par_csr_filter_device.c',
  'src/parcsr_mv/par_csr_matmat.c',
  'src/parcsr_mv/par_csr_matmat_device.c',
  'src/parcsr_mv/par_csr_matop.c',
  'src/parcsr_mv/par_csr_matop_device.c',
  'src/parcsr_mv/par_csr_matop_marked.c',
  'src/parcsr_mv/par_csr_matrix.c',
  'src/parcsr_mv/par_csr_matrix_stats.c',
  'src/parcsr_mv/par_csr_matvec.c',
  'src/parcsr_mv/par_csr_matvec_device.c',
  'src/parcsr_mv/parcsr_mv_mp.c',
  'src/parcsr_mv/par_csr_triplemat.c',
  'src/parcsr_mv/par_csr_triplemat_device.c',
  'src/parcsr_mv/par_make_system.c',
  'src/parcsr_mv/par_vector.c',
  'src/parcsr_mv/par_vector_batched.c',
  'src/parcsr_mv/par_vector_device.c',
  'src/seq_block_mv/dense_block_matmult.c',
  'src/seq_block_mv/dense_block_matrix.c',
  'src/seq_block_mv/mup_fixed.c',
  'src/seq_block_mv/mup_functions.c',
  'src/seq_block_mv/mup_pre.c',
  'src/seq_mv/csr_filter.c',
  'src/seq_mv/csr_matop.c',
  'src/seq_mv/csr_matop_device.c',
  'src/seq_mv/csr_matrix.c',
  'src/seq_mv/csr_matrix_cuda_utils.c',
  'src/seq_mv/csr_matvec.c',
  'src/seq_mv/csr_matvec_device.c',
  'src/seq_mv/csr_matvec_oomp.c',
  'src/seq_mv/csr_spadd_device.c',
  'src/seq_mv/csr_spgemm_device.c',
  'src/seq_mv/csr_spgemm_device_cusparse.c',
  'src/seq_mv/csr_spgemm_device_numblocks.c',
  'src/seq_mv/csr_spgemm_device_numer.c',
  'src/seq_mv/csr_spgemm_device_onemklsparse.c',
  'src/seq_mv/csr_spgemm_device_rocsparse.c',
  'src/seq_mv/csr_spgemm_device_rowest.c',
  'src/seq_mv/csr_spgemm_device_symbl.c',
  'src/seq_mv/csr_spgemm_device_util.c',
  'src/seq_mv/csr_spmv_device.c',
  'src/seq_mv/csr_sptrans_device.c',
  'src/seq_mv/genpart.c',
  'src/seq_mv/HYPRE_csr_matrix.c',
  'src/seq_mv/HYPRE_mapped_matrix.c',
  'src/seq_mv/HYPRE_multiblock_matrix.c',
  'src/seq_mv/HYPRE_vector.c',
  'src/seq_mv/mapped_matrix.c',
  'src/seq_mv/multiblock_matrix.c',
  'src/seq_mv/mup_fixed.c',
  'src/seq_mv/mup_functions.c',
  'src/seq_mv/mup_pre.c',
  'src/seq_mv/seq_mv_mp.c',
  'src/seq_mv/vector.c',
  'src/seq_mv/vector_batched.c',
  'src/seq_mv/vector_device.c',
  'src/sstruct_ls/F90_HYPRE_sstruct_bicgstab.c',
  'src/sstruct_ls/F90_HYPRE_sstruct_flexgmres.c',
  'src/sstruct_ls/F90_HYPRE_sstruct_gmres.c',
  'src/sstruct_ls/F90_HYPRE_sstruct_int.c',
  'src/sstruct_ls/F90_HYPRE_sstruct_lgmres.c',
  'src/sstruct_ls/F90_HYPRE_sstruct_pcg.c',
  'src/sstruct_ls/F90_HYPRE_sstruct_split.c',
  'src/sstruct_ls/F90_HYPRE_sstruct_ssamg.c',
  'src/sstruct_ls/F90_HYPRE_sstruct_sys_pfmg.c',
  'src/sstruct_ls/HYPRE_sstruct_bicgstab.c',
  'src/sstruct_ls/HYPRE_sstruct_flexgmres.c',
  'src/sstruct_ls/HYPRE_sstruct_gmres.c',
  'src/sstruct_ls/HYPRE_sstruct_int.c',
  'src/sstruct_ls/HYPRE_sstruct_lgmres.c',
  'src/sstruct_ls/HYPRE_sstruct_pcg.c',
  'src/sstruct_ls/HYPRE_sstruct_split.c',
  'src/sstruct_ls/HYPRE_sstruct_ssamg.c',
  'src/sstruct_ls/HYPRE_sstruct_sys_pfmg.c',
  'src/sstruct_ls/krylov.c',
  'src/sstruct_ls/krylov_sstruct.c',
  'src/sstruct_ls/mup_fixed.c',
  'src/sstruct_ls/mup_functions.c',
  'src/sstruct_ls/mup_pre.c',
  'src/sstruct_ls/node_relax.c',
  'src/sstruct_ls/ssamg.c',
  'src/sstruct_ls/ssamg_csolver.c',
  'src/sstruct_ls/ssamg_interp.c',
  'src/sstruct_ls/ssamg_relax.c',
  'src/sstruct_ls/ssamg_setup.c',
  'src/sstruct_ls/ssamg_setup_rap.c',
  'src/sstruct_ls/ssamg_solve.c',
  'src/sstruct_ls/ssamg_stats.c',
  'src/sstruct_ls/ssamg_uinterp.c',
  'src/sstruct_ls/sys_pfmg.c',
  'src/sstruct_ls/sys_pfmg_relax.c',
  'src/sstruct_ls/sys_pfmg_setup.c',
  'src/sstruct_ls/sys_pfmg_setup_interp.c',
  'src/sstruct_ls/sys_pfmg_solve.c',
  'src/sstruct_mv/F90_HYPRE_sstruct_graph.c',
  'src/sstruct_mv/F90_HYPRE_sstruct_grid.c',
  'src/sstruct_mv/F90_HYPRE_sstruct_matrix.c',
  'src/sstruct_mv/F90_HYPRE_sstruct_stencil.c',
  'src/sstruct_mv/F90_HYPRE_sstruct_vector.c',
  'src/sstruct_mv/HYPRE_sstruct_graph.c',
  'src/sstruct_mv/HYPRE_sstruct_grid.c',
  'src/sstruct_mv/HYPRE_sstruct_matrix.c',
  'src/sstruct_mv/HYPRE_sstruct_stencil.c',
  'src/sstruct_mv/HYPRE_sstruct_vector.c',
  'src/sstruct_mv/mup_fixed.c',
  'src/sstruct_mv/mup_functions.c',
  'src/sstruct_mv/mup_pre.c',
  'src/sstruct_mv/sstruct_axpy.c',
  'src/sstruct_mv/sstruct_copy.c',
  'src/sstruct_mv/sstruct_graph.c',
  'src/sstruct_mv/sstruct_grid.c',
  'src/sstruct_mv/sstruct_innerprod.c',
  'src/sstruct_mv/sstruct_matmult.c',
  'src/sstruct_mv/sstruct_matop.c',
  'src/sstruct_mv/sstruct_matrix.c',
  'src/sstruct_mv/sstruct_matvec.c',
  'src/sstruct_mv/sstruct_scale.c',
  'src/sstruct_mv/sstruct_stencil.c',
  'src/sstruct_mv/sstruct_vector.c',
  'src/struct_ls/cyclic_reduction.c',
  'src/struct_ls/diag_scale.c',
  'src/struct_ls/F90_HYPRE_struct_bicgstab.c',
  'src/struct_ls/F90_HYPRE_struct_cycred.c',
  'src/struct_ls/F90_HYPRE_struct_flexgmres.c',
  'src/struct_ls/F90_HYPRE_struct_gmres.c',
  'src/struct_ls/F90_HYPRE_struct_hybrid.c',
  'src/struct_ls/F90_HYPRE_struct_int.c',
  'src/struct_ls/F90_HYPRE_struct_jacobi.c',
  'src/struct_ls/F90_HYPRE_struct_lgmres.c',
  'src/struct_ls/F90_HYPRE_struct_pcg.c',
  'src/struct_ls/F90_HYPRE_struct_pfmg.c',
  'src/struct_ls/F90_HYPRE_struct_smg.c',
  'src/struct_ls/hybrid.c',
  'src/struct_ls/HYPRE_struct_bicgstab.c',
  'src/struct_ls/HYPRE_struct_cycred.c',
  'src/struct_ls/HYPRE_struct_flexgmres.c',
  'src/struct_ls/HYPRE_struct_gmres.c',
  'src/struct_ls/HYPRE_struct_hybrid.c',
  'src/struct_ls/HYPRE_struct_int.c',
  'src/struct_ls/HYPRE_struct_jacobi.c',
  'src/struct_ls/HYPRE_struct_lgmres.c',
  'src/struct_ls/HYPRE_struct_ls_mp.c',
  'src/struct_ls/HYPRE_struct_pcg.c',
  'src/struct_ls/HYPRE_struct_pfmg.c',
  'src/struct_ls/HYPRE_struct_smg.c',
  'src/struct_ls/jacobi.c',
  'src/struct_ls/mup_fixed.c',
  'src/struct_ls/mup_functions.c',
  'src/struct_ls/mup_pre.c',
  'src/struct_ls/pcg_struct.c',
  'src/struct_ls/pfmg.c',
  'src/struct_ls/pfmg2_setup_rap.c',
  'src/struct_ls/pfmg3_setup_rap.c',
  'src/struct_ls/pfmg_coarsen.c',
  'src/struct_ls/pfmg_cxyz_cc.c',
  'src/struct_ls/pfmg_cxyz_vc.c',
  'src/struct_ls/pfmg_relax.c',
  'src/struct_ls/pfmg_setup.c',
  'src/struct_ls/pfmg_setup_interp.c',
  'src/struct_ls/pfmg_setup_rap.c',
  'src/struct_ls/pfmg_setup_rap5.c',
  'src/struct_ls/pfmg_setup_rap7.c',
  'src/struct_ls/pfmg_solve.c',
  'src/struct_ls/red_black_constantcoef_gs.c',
  'src/struct_ls/red_black_gs.c',
  'src/struct_ls/semi.c',
  'src/struct_ls/semi_interp.c',
  'src/struct_ls/semi_restrict.c',
  'src/struct_ls/semi_setup_rap.c',
  'src/struct_ls/smg.c',
  'src/struct_ls/smg2_setup_rap.c',
  'src/struct_ls/smg3_setup_rap.c',
  'src/struct_ls/smg_axpy.c',
  'src/struct_ls/smg_relax.c',
  'src/struct_ls/smg_residual.c',
  'src/struct_ls/smg_setup.c',
  'src/struct_ls/smg_setup_interp.c',
  'src/struct_ls/smg_setup_rap.c',
  'src/struct_ls/smg_setup_restrict.c',
  'src/struct_ls/smg_solve.c',
  'src/struct_mv/assumed_part.c',
  'src/struct_mv/box.c',
  'src/struct_mv/box_algebra.c',
  'src/struct_mv/box_boundary.c',
  'src/struct_mv/box_ds.c',
  'src/struct_mv/box_manager.c',
  'src/struct_mv/coarsen.c',
  'src/struct_mv/communication_info.c',
  'src/struct_mv/computation.c',
  'src/struct_mv/F90_HYPRE_struct_grid.c',
  'src/struct_mv/F90_HYPRE_struct_matrix.c',
  'src/struct_mv/F90_HYPRE_struct_stencil.c',
  'src/struct_mv/F90_HYPRE_struct_vector.c',
  'src/struct_mv/HYPRE_struct_grid.c',
  'src/struct_mv/HYPRE_struct_matrix.c',
  'src/struct_mv/HYPRE_struct_mv_mp.c',
  'src/struct_mv/HYPRE_struct_stencil.c',
  'src/struct_mv/HYPRE_struct_vector.c',
  'src/struct_mv/mup_fixed.c',
  'src/struct_mv/mup_functions.c',
  'src/struct_mv/mup_pre.c',
  'src/struct_mv/project.c',
  'src/struct_mv/struct_axpy.c',
  'src/struct_mv/struct_communication.c',
  'src/struct_mv/struct_copy.c',
  'src/struct_mv/struct_data.c',
  'src/struct_mv/struct_grid.c',
  'src/struct_mv/struct_innerprod.c',
  'src/struct_mv/struct_io.c',
  'src/struct_mv/struct_matmult.c',
  'src/struct_mv/struct_matmult_core.c',
  'src/struct_mv/struct_matmult_fuse.c',
  'src/struct_mv/struct_matmult_fuse_c.c',
  'src/struct_mv/struct_matmult_fuse_cc.c',
  'src/struct_mv/struct_matmult_fuse_f.c',
  'src/struct_mv/struct_matmult_fuse_fc.c',
  'src/struct_mv/struct_matmult_fuse_fcc.c',
  'src/struct_mv/struct_matmult_fuse_ff.c',
  'src/struct_mv/struct_matmult_fuse_ffc.c',
  'src/struct_mv/struct_matmult_fuse_fff.c',
  'src/struct_mv/struct_matop.c',
  'src/struct_mv/struct_matrix.c',
  'src/struct_mv/struct_matrix_mask.c',
  'src/struct_mv/struct_matvec.c',
  'src/struct_mv/struct_matvec_cc.c',
  'src/struct_mv/struct_matvec_icc.c',
  'src/struct_mv/struct_matvec_ivc.c',
  'src/struct_mv/struct_matvec_ivcc.c',
  'src/struct_mv/struct_matvec_vc.c',
  'src/struct_mv/struct_matvec_vcc.c',
  'src/struct_mv/struct_mv_mp.c',
  'src/struct_mv/struct_scale.c',
  'src/struct_mv/struct_stencil.c',
  'src/struct_mv/struct_stmatrix.c',
  'src/struct_mv/struct_vector.c',
  'src/utilities/amg_linklist.c',
  'src/utilities/ap.c',
  'src/utilities/binsearch.c',
  'src/utilities/caliper_instrumentation.c',
  'src/utilities/complex.c',
  'src/utilities/device_markers.c',
  'src/utilities/device_utils.c',
  'src/utilities/error.c',
  'src/utilities/exchange_data.c',
  'src/utilities/F90_HYPRE_error.c',
  'src/utilities/F90_HYPRE_general.c',
  'src/utilities/fortran_matrix.c',
  'src/utilities/general.c',
  'src/utilities/handle.c',
  'src/utilities/hopscotch_hash.c',
  'src/utilities/HYPRE_handle.c',
  'src/utilities/HYPRE_version.c',
  'src/utilities/int_array.c',
  'src/utilities/int_array_device.c',
  'src/utilities/log.c',
  'src/utilities/magma.c',
  'src/utilities/matrix_stats.c',
  'src/utilities/memory.c',
  'src/utilities/memory_dmalloc.c',
  'src/utilities/memory_tracker.c',
  'src/utilities/merge_sort.c',
  'src/utilities/mmio.c',
  'src/utilities/mpistubs.c',
  'src/utilities/multiprecision.c',
  'src/utilities/mup_fixed.c',
  'src/utilities/mup_functions.c',
  'src/utilities/mup_pre.c',
  'src/utilities/omp_device.c',
  'src/utilities/prefix_sum.c',
  'src/utilities/printf.c',
  'src/utilities/qsort.c',
  'src/utilities/qsplit.c',
  'src/utilities/random.c',
  'src/utilities/state.c',
  'src/utilities/stl_ops.c',
  'src/utilities/threading.c',
  'src/utilities/timer.c',
  'src/utilities/timing.c',
  'src/utilities/unique.c',
  'src/utilities/utilities.c',
]
inc = [
  include_directories('.'),
  include_directories('src'),
  include_directories('src/blas'),
  include_directories('src/distributed_matrix'),
  include_directories('src/IJ_mv'),
  include_directories('src/krylov'),
  include_directories('src/lapack'),
  include_directories('src/multivector'),
  include_directories('src/parcsr_ls'),
  include_directories('src/parcsr_mv'),
  include_directories('src/parcsr_block_mv'),
  include_directories('src/seq_mv'),
  include_directories('src/seq_block_mv'),
  include_directories('src/sstruct_mv'),
  include_directories('src/struct_ls'),
  include_directories('src/struct_mv'),
  include_directories('src/utilities'),
]

m_dep = meson.get_compiler('c').find_library('m', required: false)
blas_dep = dependency('blas')
mpi_dep = subproject('mpi-c').get_variable('mpi_dep')
assert(mpi_dep.found(), 'MPI not found!')
deps = [
  blas_dep,
  m_dep,
  mpi_dep,
  dependency('lapack'),
  dependency('openmp'),
  dependency('superlu'),
  dependency('superlu_dist'),
]

hypre_lib = shared_library('hypre', src, include_directories: inc, dependencies: deps)
hypre_dep = declare_dependency(link_with: hypre_lib, include_directories: inc, dependencies: deps)
