# This file is part of https://github.com/KurtBoehm/tlaxcaltin.
#
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

option('mixedint', type: 'boolean', value: false)
option('bigint', type: 'boolean', value: false)
option('single', type: 'boolean', value: false)
option('long_double', type: 'boolean', value: false)
option('complex', type: 'boolean', value: false)
